 * interface configuration errors in the Web Admin (or on the CLI when editing the vip field)
 * debian support: radiusd is started even if disabled
 * 'uninitialized value' warnings in checkup phase (pfcmd checkup)
 * got rid of the unused (unuseful) logs/pfdhcplistener_<int> log files. See logs/packetfence.log instead.
 * pfdhcplistener doesn't hang anymore

--------------------------------------------------------------------------------
Version 3.3.2 released on 2012-04-23

New Hardware
 * HP Procurve 5300 series now identified as supported (thanks to the community!)

Bug Fixes
 * critical fix for deauthentication affecting AeroHIVE, Aruba, Cisco Wireless, Motorola and Ruckus. Introduced in 3.3.0 (#1426)
 * Web Admin no longer showing errors in popup dialogs. Introduced in 3.0.3 (#1420)
 * violation trigger parser now more tolerant of trailing spaces
 * 'add user' renamed 'add admin' for consistency (#1381, Thanks to Joao Moreira)
 * apache tests under pfcmd checkup fails if modules generates warnings (#1283, Thanks to Philipp Snizek)
 * another shot at 'named not started if using inline enforcement only'
 * trap_limit feature fixes: local traps ignored and continue processing if no action (#1405)
 * false positive error reporting on the Web Admin on specific User-Agents (#1408)
 * saner axis in dashboard graphics

--------------------------------------------------------------------------------
Version 3.3.1 released on 2012-04-16

Bug Fixes
 * named not started if using inline enforcement only

--------------------------------------------------------------------------------
Version 3.3.0 released on 2012-04-13

New Hardware
 * AlliedTelesis AT8000GS Switches using 802.1x/Mac Authentication without VoIP
 * Added 802.1x/Mac Authentication support for HP 2500/2600 switches (no VoIP)
 * Cisco WLC/WiSM product line now supports RADIUS Disconnect (RFC3576) to perform de-authentication

New Features