@@ -40,6 +40,7 @@ Bug Fixes
  * 'uninitialized value' warnings in checkup phase (pfcmd checkup)
  * got rid of the unused (unuseful) logs/pfdhcplistener_<int> log files. See logs/packetfence.log instead.
  * pfdhcplistener doesn't hang anymore
+ * pid (username) of the form 'domain\\user' are now allowed (#1253)
 
 --------------------------------------------------------------------------------
 Version 3.3.2 released on 2012-04-23
